--- a/css/frontend.css
+++ b/css/frontend.css
@@ -1,4 +1,4 @@
-@font-face {
+@import url(https://fonts.googleapis.com/css?family=Anton|Cuprum|Francois+One|Oswald|Roboto|Yanone+Kaffeesatz);@font-face {
   font-family: UTMAVO;
   src: url("../fonts/utm-avo.ttf");
 }
@@ -506,4 +506,244 @@ This class is added to the container
   color: white;
   padding-top: 10px;
   padding-bottom: 10px;
+}
+
+#p_detail_topinfor {
+  display: none;
+  font-size: 18px;
+  padding: 10px;
+  color: white;
+}
+
+.ttnav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+.ttnav li {
+  float: left;
+  padding-right: 8px;
+}
+
+.ttnav li::before {
+  content: ' ';
+  width: 3px;
+  margin-right: 6px;
+  background-color: #0f648b;
+  padding-left: 6px;
+}
+
+.ttnav li a {
+  font-weight: bold;
+  font-size: 17px;
+  color: #0f648b;
+}
+
+.ttnav li:last-child::before {
+  content: '';
+  width: 3px;
+  margin-right: 6px;
+  background-color: #61b7e4;
+  padding-left: 5px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+table th, table td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+#uspost li {
+  color: #007bff;
+  font-size: 15px;
+}
+
+#uspost li .fas {
+  font-size: 18px;
+}
+
+.fabs a i {
+  font-size: 22px;
+  padding: 3px;
+  padding-left: 10px;
+}
+
+.fabs a:hover {
+  color: #083b58;
+  text-decoration: none;
+}
+
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #083b58;
+  color: white;
+}
+
+.fontbds {
+  font-size: 18px;
+}
+
+.bdbdslq::before {
+  content: ' ';
+  width: 20px;
+  border-left: 5px solid #0d7eb2;
+  margin-top: 20px;
+  padding-left: 10px;
+}
+
+.border-colorbds {
+  border: 1px solid #9e9f9f;
+}
+
+.bg-dprimary {
+  background-color: #083b58;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+  color: white;
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #064866;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #064866;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
+
+#p_Detail_img_avatar {
+  width: 100%;
+  height: 98px;
+  border: 2px solid #083b58;
+}
+
+@media screen and (max-width: 768px) {
+  #p_Detail_img_avatar {
+    height: auto;
+  }
+  #p_detail_topinfor {
+    display: block;
+  }
+  table {
+    margin-top: 10px;
+  }
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+/* Position the image container (needed to position the left and right arrows) */
+.contslider {
+  position: relative;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
+  cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 15px;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Container for image text */
+.caption-container {
+  text-align: center;
+  background-color: #222;
+  padding: 2px 16px;
+  color: white;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Six columns side by side */
+.column {
+  float: left;
+  width: 16.66%;
+}
+
+/* Add a transparency effect for thumnbail images */
+.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
 }
