--- a/local/resources/assets/sass/be.common.scss
+++ b/local/resources/assets/sass/be.common.scss
@@ -1,6 +1,12 @@
 .show-image{
   width: 100%;
 }
+.image-choose{
+  height: 80px;
+}
+.remove-image{
+  cursor: pointer;
+}
 .table-style{
   tr,td{
     border: 1px solid #eee;
