--- a/css/backend.css
+++ b/css/backend.css
@@ -62,6 +62,14 @@ img {
   width: 100%;
 }
 
+.image-choose {
+  height: 80px;
+}
+
+.remove-image {
+  cursor: pointer;
+}
+
 .table-style tr, .table-style td {
   border: 1px solid #eee;
 }
