--- a/local/resources/assets/sass/frontend.scss
+++ b/local/resources/assets/sass/frontend.scss
@@ -5,7 +5,9 @@
 @import "m-menu-blur";
 //@import "fe.menu";
 //@import "fe.menu2";
+@import "fe.form_search";
 @import "fe.menu";
 @import "fe.home";
-@import "fe.poduct";
+@import "fe.search";
+@import "fe.product";
 @import "fe.product.slider";
