--- a/local/resources/assets/sass/fe.home.h_product.scss
+++ b/local/resources/assets/sass/fe.home.h_product.scss
@@ -10,31 +10,55 @@
     font-weight: bold;
   }
   .one-product {
+    transition: all 0.2s;
+    box-shadow: 0 0 35px rgba(0, 0, 0, 0.1);
+    border-bottom: solid 2px #5CBE6D;
     img.img-one-product {
       height: 210px;
     }
     h2.title {
+      padding: 20px 20px 15px;
       a {
         display: block;
-        color: #212529;
+        color: $color-title;
         text-transform: capitalize;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        font-weight: bold;
+        font-size: 20px;
+        font-weight: 600;
+        margin-bottom: 10px;
+        line-height: 1.5;
       }
     }
     .info {
       margin-top: 5px;
-      ul {
+      padding: 10px;
+      ul.info-top {
         list-style: none;
-        text-align: center;
-        background-color: $main-color;
+        display: inline-flex;
+        width: 100%;
+        padding: 0px 20px 15px;
         li {
-          color: white;
+          color: black;
           padding-top: 10px;
           padding-bottom: 10px;
+          width: 100%;
+          text-align: left;
+          i {
+            color: $color-title;
+            padding-right: 10px;
+          }
         }
       }
+      .info-bottom {
+        color: black;
+        padding: 0px 20px 15px;
+        i {
+          color: $color-title;
+          padding-right: 10px;
+        }
+      }
+    }
+    &:hover{
+      box-shadow: 0 10px 30px 0 rgba(58, 87, 135, 0.58);
     }
   }
 }
