--- a/local/resources/assets/sass/fe.product.scss
+++ b/local/resources/assets/sass/fe.product.scss
@@ -164,6 +164,7 @@ table {
     margin-bottom: 30px;
     img.img-one-product {
       height: 300px;
+      width: 100%;
     }
     .info {
       h3 {
