--- a/local/resources/assets/sass/frontend.scss
+++ b/local/resources/assets/sass/frontend.scss
@@ -7,8 +7,10 @@
 //@import "fe.menu2";
 @import "fe.form_search";
 @import "fe.menu";
+@import "fe.slider";
 @import "fe.home";
 @import "fe.search";
 @import "fe.product";
 @import "fe.product.slider";
+@import "fe.page";
 @import "fe.footer";
