--- a/local/resources/assets/sass/fe.home.h_product.scss
+++ b/local/resources/assets/sass/fe.home.h_product.scss
@@ -1,4 +1,5 @@
 #h_product {
+  margin-top: 20px;
   h3.title {
     font-size: 21px;
     text-transform: uppercase;
@@ -15,6 +16,7 @@
     border-bottom: solid 2px #5CBE6D;
     img.img-one-product {
       height: 210px;
+      width: 100%;
     }
     h2.title {
       padding: 20px 20px 15px;
