--- a/local/resources/assets/sass/fe.product.slider.scss
+++ b/local/resources/assets/sass/fe.product.slider.scss
@@ -10,6 +10,10 @@
 /* Hide the images by default */
 .mySlides {
   display: none;
+  img{
+    width: 100%;
+    height:500px;
+  }
 }
 
 /* Add a pointer when hovering over the thumbnail images */
@@ -79,9 +83,23 @@
 /* Add a transparency effect for thumnbail images */
 .demo {
   opacity: 0.6;
+  height: 100px;
 }
 
 .active,
 .demo:hover {
   opacity: 1;
+}
+@media screen and(max-width: 768px) {
+  .mySlides {
+    display: none;
+    img{
+      width: 100%;
+      height:300px;
+    }
+  }
+  .demo{
+    height: 58px;
+  }
+
 }
