--- a/local/resources/assets/sass/fe.menu.scss
+++ b/local/resources/assets/sass/fe.menu.scss
@@ -17,6 +17,9 @@
         }
       }
     }
+    img.img-logo{
+      width: 100%;
+    }
   }
   #menu-bottom {
     background-color: $main-color;
