--- a/local/resources/assets/sass/fe.footer.scss
+++ b/local/resources/assets/sass/fe.footer.scss
@@ -1,13 +1,33 @@
 #footer {
   color: white;
   .footer-top {
-    background-color: $main-color;
-    padding-top: 20px;
-    padding-bottom: 40px;
+    position: relative;
+    //background-color: $main-color;
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    padding-top: 38px;
+    padding-bottom: 35px;
+    &:before{
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      content: '';
+      background: rgba(00,00,00,0.8);
+      z-index: 0;
+      top:0;
+      left: 0;
+    }
     h4.title{
-      font-weight: bold;
       margin-bottom: 20px;
       text-transform: uppercase;
+    }
+    h5{
+      font-size: 20px;
+      span{
+        color: #007bff;
+      }
     }
     ul{
       list-style: none;
@@ -17,21 +37,114 @@
           margin-right: 10px;
           color: white;
         }
+        a{
+          color: white;
+          font-size: 14px;
+        }
+        button{
+          border-radius: 3px;
+          font-size: 13px;
+          border:none;
+          padding: 6px 12px;
+          background-color: #004085;
+          color: white;
+          margin-top: 10px;
+          cursor:pointer;
+        }
       }
     }
     .description{
       line-height: 1.5;
     }
-  }
-  .footer-bottom {
-    background-color: #333;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    .bottom-left{
-
+    p{
+      line-height: 20px;
+      font-size: 14px;
+      span{
+        color: #007bff;
+        //font-weight: bold;
+      }
+      img{
+        width: 80px;
+        height: auto;
+        float: left;
+        padding-right: 10px;
+      }
     }
-    .bottom-right{
-      text-align: right;
+  }
+
+  #info {
+
+    .subc-email {
+      //margin-top: 10px;
+      input {
+        padding: 10px 13px;
+        font-size: 14px;
+        color: #454545;
+      }
+      button.subc {
+        height: 46px;
+        font-size: 18px!important;
+        padding: 0px 16px!important;
+        margin-left: 3px;
+        text-align: center!important;
+        cursor: pointer;
+        margin-top: 0px!important;
+        transition: .6s;
+        i{
+          margin-right: 0px!important;
+        }
+        &:hover{
+          background-color: #0062cc;
+        }
+      }
+    }
+    .sc-nw {
+      margin-top: 10px;
+      a {
+        color: white;
+        transition: .3s;
+        &:hover {
+          color: #1c7430;
+        }
+        &:hover i {
+          //border: 2px solid #1c7430;
+          background-color: #1c7430;
+          color: white;
+        }
+        i {
+          width: 36px;
+          height: 36px;
+          border-radius: 50%;
+          //border: 2px solid #444444;
+          line-height: 36px;
+          text-align: center;
+          transition: .3s;
+          margin-right: 0px!important;
+        }
+        i.fa-facebook-f{
+          background-color: #4267b2;
+        }
+
+        i.fa-instagram{
+          -webkit-background-size: cover;
+          background-size: cover;
+          background-position: center center;
+          background-repeat: no-repeat;
+        }
+
+
+      }
+    }
+    #project {
+      button {
+        margin-top: 10px;
+        padding: 6px 18px 5px 18px;
+        border-radius: 3px;
+        border: none;
+        background-color: #1c7430;
+        color: white;
+        cursor: pointer;
+      }
     }
   }
 }
