--- a/local/resources/assets/sass/fe.product.scss
+++ b/local/resources/assets/sass/fe.product.scss
@@ -90,8 +90,8 @@ table {
 /* Style the tab */
 .tab {
   overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #083b58;
+  //border: 1px solid #ccc;
+  //background-color: #083b58;
   color: white;
 }
 
@@ -145,8 +145,8 @@ table {
 /* Style the tab content */
 .tabcontent {
   display: none;
-  padding: 6px 12px;
-  border: 1px solid #ccc;
+  //padding: 6px 12px;
+  //border: 1px solid #ccc;
   border-top: none;
 }
 
