--- a/local/resources/assets/sass/frontend.scss
+++ b/local/resources/assets/sass/frontend.scss
@@ -10,7 +10,17 @@
 @import "fe.slider";
 @import "fe.home";
 @import "fe.search";
-@import "fe.product";
+//@import "fe.product";
 @import "fe.product.slider";
 @import "fe.page";
 @import "fe.footer";
+@import "common/slider";
+@import "common/search_bar";
+@import "common/banner-rent";
+@import "common/mobile-bar";
+@import "common/slider2";
+@import "common/banner-title";
+@import "home/index";
+@import "project/index";
+@import "canhochitiet/index";
+@import "duanchitiet/index";
