--- a/local/resources/assets/sass/fe.menu.scss
+++ b/local/resources/assets/sass/fe.menu.scss
@@ -1,69 +1,75 @@
 #menu {
   #menu-top {
-    i {
-      font-size: 68px;
+    button{
+      color:#9d9d9d;
+      background-color: transparent;
+      border: none;
+      font-size: 18px;
+      padding: 0px 16px;
     }
-    span.slogan {
-      font-size: 36px;
-    }
-    ul {
-      display: inline-flex;
-      list-style: none;
-      li {
-        font-size: 22px;
-        padding-right: 13px;
-        i {
-          font-size: 26px;
+    #search_box{
+      margin-left: 38px;
+      input{
+        background-color: transparent;
+        border:none;
+        min-width: 300px;
+        font-size: 14px;
+        padding:12px 10px 12px 14px;
+        &:hover{
+          outline: none;
+        }
+        &:focus{
+          outline: none;
         }
       }
+      background-color: #fff;
+      border: 1px solid #9d9d9d;
+      border-radius: 3px;
+      box-shadow: 0px 0px 2px #9d9d9d ;
     }
-    img.img-logo{
-      width: 100%;
+    .img-logo{
+      width: 82px;
+      height: auto;
     }
   }
-  #menu-bottom {
-    background-color: $main-color;
-    ul.main-menu {
-      list-style: none;
-      display: inline-flex;
-      li {
-        a {
-          padding: 15px;
-          color: white;
-          display: block;
+
+
+  #nav-content {
+    //margin-left: 30px;
+    //padding-right: 30px;
+    text-align: right;
+    ul{
+      list-style-type: none;
+      li{
+        display: inline-block;
+        padding: 10px 22px 10px 0px;
+        a{
+          font-size: 14px;
+          //font-weight: bold;
+          color:#595959;
+          transition: .3s;
+          text-transform: uppercase;
+          &:hover{
+            color: #0062cc;
+          }
+
         }
-        a:hover {
-          background-color: $main-color-hover;
+        a.active{
+          color: #0062cc;
         }
       }
-      li.li-has-item-down {
-
-        position: relative;
-        ul.sub-menu {
-          position: absolute;
-          transition: all 0.2s;
-          background-color: $main-color;
-          display: none;
-          //opacity: 0;
-          z-index: 9;
-          list-style: none;
-          width: 250%;
-          li {
-            a {
-              transition: all 0.2s;
-              &:hover{
-                padding-left: 20px;
-              }
+      li.flag-overlay{
+        &:hover{
+          .flag-content{
+            opacity: 1;
+            z-index: 11;
+            ul{
+              display: block;
             }
           }
         }
-        &:hover {
-          ul.sub-menu {
-            display: block;
-            //opacity: 1;
-          }
-        }
       }
     }
+
   }
 }
