--- a/local/resources/assets/sass/reset.scss
+++ b/local/resources/assets/sass/reset.scss
@@ -1,4 +1,6 @@
 //RESET CSS
+@import url('https://fonts.googleapis.com/css?family=Archivo|Fira+Sans|Roboto');
+
 @font-face {
   font-family: UTMAVO;
   src: url('../fonts/utm-avo.ttf');
@@ -19,7 +21,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 body {
   line-height: 1;
-  font-family: UTMAVO!important;
+  font-family: 'Roboto', sans-serif!important;
 }
 
 //ol, ul {
