--- a/css/frontend.css
+++ b/css/frontend.css
@@ -3014,15 +3014,23 @@ This class is added to the container
 }
 
 /* Style the tab */
-.tab {
+#p_detail {
+  /* Style the buttons inside the tab */
+  /* Change background color of buttons on hover */
+  /* Create an active/current tablink class */
+  /* Style the tab content */
+  /* Style the tab content */
+  /* Fade in tabs */
+}
+
+#p_detail .tab {
   overflow: hidden;
   border-top: 1px solid #ccc;
   /*border-bottom: none;*/
   background-color: #f1f1f1;
 }
 
-/* Style the buttons inside the tab */
-.tab button {
+#p_detail .tab button {
   background-color: inherit;
   min-width: 20%;
   width: auto;
@@ -3040,29 +3048,25 @@ This class is added to the container
   position: relative;
 }
 
-.tab button i {
+#p_detail .tab button i {
   font-size: 33px;
 }
 
-/* Change background color of buttons on hover */
-.tab button:hover {
+#p_detail .tab button:hover {
   background-color: #ddd;
 }
 
-/* Create an active/current tablink class */
-.tab button.active {
+#p_detail .tab button.active {
   background-color: white;
   border-bottom: none !important;
   color: #007bff;
 }
 
-.tab button.active i {
+#p_detail .tab button.active i {
   color: #007bff;
 }
 
-/* Style the tab content */
-/* Style the tab content */
-.tabcontent {
+#p_detail .tabcontent {
   display: none;
   padding: 16px 12px;
   -webkit-animation: fadeEffect 1s;
@@ -3071,7 +3075,6 @@ This class is added to the container
   border-top: none;
 }
 
-/* Fade in tabs */
 @-webkit-keyframes fadeEffect {
   from {
     opacity: 0;
@@ -3091,7 +3094,7 @@ This class is added to the container
 }
 
 @media (min-width: 300px) and (max-width: 500px) {
-  .tab button {
+  #p_detail .tab button {
     width: 100%;
   }
 }
