--- a/local/resources/assets/sass/fe.home.h_contact.scss
+++ b/local/resources/assets/sass/fe.home.h_contact.scss
@@ -23,7 +23,8 @@
       padding: 0 0.8em;
       color: $main-color;
       text-transform: uppercase;
-      font-weight: bold;
+      font-weight: normal;
+
     }
   }
   .lh-red{
