--- a/css/frontend.css
+++ b/css/frontend.css
@@ -418,6 +418,33 @@ This class is added to the container
   cursor: pointer;
 }
 
+#menu .dropdown-overlay {
+  position: relative;
+}
+
+#menu .dropdown-overlay:hover .dropdown-content {
+  z-index: 100;
+  top: 100%;
+  opacity: 1;
+}
+
+#menu .dropdown-overlay .dropdown-content {
+  position: absolute;
+  top: 130%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  text-align: left;
+  padding: 10px;
+  z-index: 0;
+  background-color: #fff;
+  -webkit-transition: .6s;
+  transition: .6s;
+  opacity: 0;
+  width: 170px;
+  /*box-shadow: 0px 0px 2px #2a2a2a;*/
+}
+
 #menu #menu-top button {
   color: #9d9d9d;
   background-color: transparent;
