--- a/local/resources/assets/sass/fe.menu.scss
+++ b/local/resources/assets/sass/fe.menu.scss
@@ -1,4 +1,29 @@
 #menu {
+
+  .dropdown-overlay{
+    position: relative;
+  }
+
+  .dropdown-overlay:hover .dropdown-content{
+    z-index: 100;
+    top: 100%;
+    opacity: 1;
+  }
+  .dropdown-overlay .dropdown-content{
+    position: absolute;
+    top: 130%;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: left;
+    padding: 10px;
+    z-index: 0;
+    background-color: #fff;
+    transition: .6s;
+    opacity: 0;
+    width: 170px;
+    /*box-shadow: 0px 0px 2px #2a2a2a;*/
+  }
+
   #menu-top {
     button{
       color:#9d9d9d;
